# edge-ai-tuning-kit

./: .env.template  .gitignore  README.md  SECURITY.md  docker-compose-dev.yml  docker-compose.yml  run.sh  setup.sh  start.sh
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/tests/: api.py
.github/tests/scripts/: ci-api-test.sh  fuzz-test.sh
backend/server/: Dockerfile  Dockerfile.binary  alembic.ini  dev_logger.yaml  logger.yaml  main.py  requirements.txt
backend/serving/: Dockerfile  entrypoint.sh
backend/worker/: Dockerfile  Dockerfile.binary  app.py  entrypoint.sh  requirements.txt
backend/workers/llm-finetuning-node/training/: Dockerfile  app.py  entrypoint.sh  pyproject.toml  requirements.txt
backend/workers/llm-finetuning-node/training/clients/: base.py  hardware.py  tasks.py
backend/workers/llm-finetuning-node/training/common/: callbacks.py
backend/workers/llm-finetuning-node/training/inference/: model.py
backend/workers/llm-finetuning-node/training/templates/: fsdp.yaml
backend/workers/llm-finetuning-node/training/trainer/modules/: evaluate.py  lora.py  qlora.py  synthetic_dataset.py
backend/workers/llm-finetuning-node/training/trainer/modules/utils/: callbacks.py  common.py  datasets.py  inference.py  logger.py
deployment/: README.md  install.sh  run.sh
deployment/backend/: requirements.txt
deployment/edge-ui/: package-lock.json  package.json
docs/: SOFTWARE.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/admin/: .env.template  Dockerfile  Dockerfile.binary  package-lock.json  package.json
(+342 files in other folders)
