[project]
name = "training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes>=0.49.2",
    "celery[redis]>=5.6.3",
    "eventlet>=0.41.0",
    "omegaconf>=2.3.1",
    "openvino>=2026.2.1",
    "openvino-genai>=2026.2.1.0",
    "optimum-intel[nncf,openvino]>=2.0.0",
    "peft>=0.19.1",
    "protobuf>=7.35.1",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "sentencepiece>=0.2.1",
    "torch>=2.12.1",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.1",
    "transformers>=5.0.0",
    "trl>=1.6.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/xpu"

[tool.uv]
index-strategy = "unsafe-best-match"
